added fimcoplatform views

--- a/fimco/fimcoplatform/templates/fimcoplatform/auctions.html
+++ b/fimco/fimcoplatform/templates/fimcoplatform/auctions.html
@@ -1,11 +1,4 @@
 {% extends "fimcoplatform/base.html" %}
-{% block links %}
-    <link href="/static/pochi/css/navyblue.css" rel="stylesheet" type="text/css" />
-{% endblock %}
-{% block content %}
-    <section id="middle">
-        <div class="padding-15">
+{% block main %}
 
-        </div>
-    </section>
 {% endblock %}
