--- a/fimco/fimcosite/templates/base.html
+++ b/fimco/fimcosite/templates/base.html
@@ -84,10 +84,10 @@
                                             WHAT WE OFFER
                                         </a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="{% url 'info' %}">POCHI</a></li>
+                                            <li><a href="{% url 'info' 'pochi' %}">POCHI</a></li>
                                             <li><a href="{% url 'brokerage' %}">Brokerage</a></li>
                                             <li><a href="{% url 'fund' %}">Fund Management</a></li>
-                                            <li><a href="">Market Information</a></li>
+                                            <li><a href="{% url 'info' 'market' %}">Market Information</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown">
