--- a/fimco/fimcoplatform/templates/fimcoplatform/exchange.html
+++ b/fimco/fimcoplatform/templates/fimcoplatform/exchange.html
@@ -1,55 +1,109 @@
 {% extends "fimcoplatform/base.html" %}
-{% block links %}
-    <link href="/static/pochi/css/navyblue.css" rel="stylesheet" type="text/css" />
-{% endblock %}
-{% block content %}
-    <section id="middle">
-        <div class="padding-15">
-            <div class="row">
-                <div class="col-md-4">
-                    <!-- Nav -->
-                    <div id="panel-ui-tan-l5" class="panel panel-default">
-                        <div class="panel-heading">
-                            <span class="elipsis"><!-- panel title -->
-                                <strong>Group Information</strong>
-                            </span>
-                        </div>
-                        <!-- panel content -->
-                        <div class="panel-body">
-                            <ul class="side-nav list-group margin-bottom30">
-                                <li class="list-group-item active"><a href="#"><i class="fa fa-home"></i> Members</a></li>
-                                <li class="list-group-item list-toggle">   <!-- NOTE: "active" to be open on page load -->
-                                    <a data-toggle="collapse" data-parent="#sidebar-nav" href="#collapse-2"><i class="fa fa-level-down"></i> Collapse Menu</a>
-                                    <ul id="collapse-2" class="collapse"><!-- NOTE: "collapse in" to be open on page load -->
-                                        <li><a href="#"><i class="fa fa-angle-right"></i> Option #1</a></li>
-                                        <li><a href="#"><i class="fa fa-angle-right"></i> Option #2</a></li>
-                                        <li><a href="#"><i class="fa fa-angle-right"></i> Option #3</a></li>
-                                    </ul>
-                                </li>
-                                <li class="list-group-item"><a href="#"><i class="fa fa-comments"></i> Comments</a></li>
-                                <li class="list-group-item"><a href="#"><i class="fa fa-edit"></i> History</a></li>
-                                <li class="list-group-item"><a href="#"><i class="fa fa-users"></i> Friends</a></li>
-                            </ul>
-                        </div>
-                        <!-- /panel content -->
-                    </div>
-                    <!-- /Nav -->
+{% block main %}
+    <div class="row">
+        <div class="col-md-4">
+            <!-- Nav -->
+            <div id="panel-ui-tan-l5" class="panel panel-default">
+                <div class="panel-heading">
+                    <span class="elipsis"><!-- panel title -->
+                        <strong>Group Information</strong>
+                    </span>
                 </div>
-                <div class="col-md-8">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
+                <!-- panel content -->
+                <div class="panel-body">
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exchangeChartModal">
+                        View chart
+                    </button>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exchangeTableModal">
+                        View table
+                    </button>
+                </div>
+                <!-- /panel content -->
+            </div>
+            <!-- /Nav -->
+        </div>
+        <div class="col-md-8">
+            <div class="panel panel-default">
+                <div class="panel-heading">
 
-                        </div>
-                        <div class="panel-body">
+                </div>
+                <div class="panel-body">
 
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 {% endblock %}
 
-{% block scripts %}
-    <script type="text/javascript" src="/static/pochi/js/ajax.js"></script>
+{% block more_scripts %}
+    <script type="text/javascript">
+        $(document).ready(function() {
+
+            var table = $('#datatable_sample');
+            table.dataTable({
+                "columns": [
+                    {"orderable": false},
+                    {"orderable": true},
+                    {"orderable": false},
+                    {"orderable": false},
+                    {"orderable": true},
+                    {"orderable": false}
+                ],
+                "lengthMenu": [
+                    [5, 15, 20, -1],
+                    [5, 15, 20, "All"] // change per page values here
+                ],
+                // set the initial value
+                "pageLength": 5,
+                "pagingType": "bootstrap_full_number",
+                "language": {
+                    "lengthMenu": "  _MENU_ records",
+                    "paginate": {
+                        "previous":"Prev",
+                        "next": "Next",
+                        "last": "Last",
+                        "first": "First"
+                    }
+                },
+                "columnDefs": [
+                    {  // set default column settings
+                        'orderable': false,
+                        'targets': [0]
+                    },
+                    {
+                        "searchable": false,
+                        "targets": [0]
+                    }
+                ],
+                "order": [
+                    [1, "asc"]
+                ] // set first column as a default sort by asc
+            });
+
+            var tableWrapper = jQuery('#datatable_sample_wrapper');
+
+            // modify table per page drop down
+            tableWrapper.find('.dataTables_length select').addClass("form-control input-xsmall input-inline");
+        });
+
+        var ctx = document.getElementById('exchangeChart').getContext('2d');
+        new Chart(ctx, {
+            // The type of chart we want to create
+            type: 'line',
+
+            // The data for our dataset
+            data: {
+                labels: ["January", "February", "March", "April", "May", "June", "July"],
+                datasets: [{
+                    label: "My First dataset",
+                    backgroundColor: 'rgb(255, 99, 132)',
+                    borderColor: 'rgb(255, 99, 132)',
+                    data: [0, 10, 5, 2, 20, 30, 45]
+                }]
+            },
+
+            // Configuration options go here
+            options: {}
+        });
+    </script>
 {% endblock %}
