--- a/fimco/fimcoplatform/templates/fimcoplatform/shares.html
+++ b/fimco/fimcoplatform/templates/fimcoplatform/shares.html
@@ -1,11 +1,899 @@
 {% extends "fimcoplatform/base.html" %}
-{% block links %}
-    <link href="/static/pochi/css/navyblue.css" rel="stylesheet" type="text/css" />
-{% endblock %}
-{% block content %}
-    <section id="middle">
-        <div class="padding-15">
+{% block main %}
+    <div id="panel-2" class="panel panel-default">
+						<div class="panel-heading">
+							<span class="title elipsis">
+								<strong>DATATABLE WITH TABLETOOLS</strong> <!-- panel title -->
+							</span>
 
-        </div>
-    </section>
+							<!-- right options -->
+							<ul class="options pull-right list-inline">
+								<li><a href="#" class="opt panel_colapse" data-toggle="tooltip" title="Colapse" data-placement="bottom"></a></li>
+								<li><a href="#" class="opt panel_fullscreen hidden-xs" data-toggle="tooltip" title="Fullscreen" data-placement="bottom"><i class="fa fa-expand"></i></a></li>
+								<li><a href="#" class="opt panel_close" data-confirm-title="Confirm" data-confirm-message="Are you sure you want to remove this panel?" data-toggle="tooltip" title="Close" data-placement="bottom"><i class="fa fa-times"></i></a></li>
+							</ul>
+							<!-- /right options -->
+
+						</div>
+
+						<!-- panel content -->
+						<div class="panel-body">
+
+							<table class="table table-striped table-bordered table-hover" id="sample_2">
+								<thead>
+									<tr>
+										<th>
+											 Rendering engine
+										</th>
+										<th>
+											 Browser
+										</th>
+										<th>
+											 Platform(s)
+										</th>
+										<th>
+											 Engine version
+										</th>
+										<th>
+											 CSS grade
+										</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td>
+											 Trident
+										</td>
+										<td>
+											 Internet Explorer 4.0
+										</td>
+										<td>
+											 Win 95+
+										</td>
+										<td>
+											 4
+										</td>
+										<td>
+											 X
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Trident
+										</td>
+										<td>
+											 Internet Explorer 5.0
+										</td>
+										<td>
+											 Win 95+
+										</td>
+										<td>
+											 5
+										</td>
+										<td>
+											 C
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Trident
+										</td>
+										<td>
+											 Internet Explorer 5.5
+										</td>
+										<td>
+											 Win 95+
+										</td>
+										<td>
+											 5.5
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Trident
+										</td>
+										<td>
+											 Internet Explorer 6
+										</td>
+										<td>
+											 Win 98+
+										</td>
+										<td>
+											 6
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Trident
+										</td>
+										<td>
+											 Internet Explorer 7
+										</td>
+										<td>
+											 Win XP SP2+
+										</td>
+										<td>
+											 7
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Trident
+										</td>
+										<td>
+											 AOL browser (AOL desktop)
+										</td>
+										<td>
+											 Win XP
+										</td>
+										<td>
+											 6
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Firefox 1.0
+										</td>
+										<td>
+											 Win 98+ / OSX.2+
+										</td>
+										<td>
+											 1.7
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Firefox 1.5
+										</td>
+										<td>
+											 Win 98+ / OSX.2+
+										</td>
+										<td>
+											 1.8
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Firefox 2.0
+										</td>
+										<td>
+											 Win 98+ / OSX.2+
+										</td>
+										<td>
+											 1.8
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Firefox 3.0
+										</td>
+										<td>
+											 Win 2k+ / OSX.3+
+										</td>
+										<td>
+											 1.9
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Camino 1.0
+										</td>
+										<td>
+											 OSX.2+
+										</td>
+										<td>
+											 1.8
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Camino 1.5
+										</td>
+										<td>
+											 OSX.3+
+										</td>
+										<td>
+											 1.8
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Netscape 7.2
+										</td>
+										<td>
+											 Win 95+ / Mac OS 8.6-9.2
+										</td>
+										<td>
+											 1.7
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Netscape Browser 8
+										</td>
+										<td>
+											 Win 98SE+
+										</td>
+										<td>
+											 1.7
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Netscape Navigator 9
+										</td>
+										<td>
+											 Win 98+ / OSX.2+
+										</td>
+										<td>
+											 1.8
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Mozilla 1.0
+										</td>
+										<td>
+											 Win 95+ / OSX.1+
+										</td>
+										<td>
+											 1
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Mozilla 1.1
+										</td>
+										<td>
+											 Win 95+ / OSX.1+
+										</td>
+										<td>
+											 1.1
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Mozilla 1.2
+										</td>
+										<td>
+											 Win 95+ / OSX.1+
+										</td>
+										<td>
+											 1.2
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Mozilla 1.3
+										</td>
+										<td>
+											 Win 95+ / OSX.1+
+										</td>
+										<td>
+											 1.3
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Mozilla 1.4
+										</td>
+										<td>
+											 Win 95+ / OSX.1+
+										</td>
+										<td>
+											 1.4
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Mozilla 1.5
+										</td>
+										<td>
+											 Win 95+ / OSX.1+
+										</td>
+										<td>
+											 1.5
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Mozilla 1.6
+										</td>
+										<td>
+											 Win 95+ / OSX.1+
+										</td>
+										<td>
+											 1.6
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Mozilla 1.7
+										</td>
+										<td>
+											 Win 98+ / OSX.1+
+										</td>
+										<td>
+											 1.7
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Mozilla 1.8
+										</td>
+										<td>
+											 Win 98+ / OSX.1+
+										</td>
+										<td>
+											 1.8
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Seamonkey 1.1
+										</td>
+										<td>
+											 Win 98+ / OSX.2+
+										</td>
+										<td>
+											 1.8
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Gecko
+										</td>
+										<td>
+											 Epiphany 2.20
+										</td>
+										<td>
+											 Gnome
+										</td>
+										<td>
+											 1.8
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Webkit
+										</td>
+										<td>
+											 Safari 1.2
+										</td>
+										<td>
+											 OSX.3
+										</td>
+										<td>
+											 125.5
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Webkit
+										</td>
+										<td>
+											 Safari 1.3
+										</td>
+										<td>
+											 OSX.3
+										</td>
+										<td>
+											 312.8
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Webkit
+										</td>
+										<td>
+											 Safari 2.0
+										</td>
+										<td>
+											 OSX.4+
+										</td>
+										<td>
+											 419.3
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Webkit
+										</td>
+										<td>
+											 Safari 3.0
+										</td>
+										<td>
+											 OSX.4+
+										</td>
+										<td>
+											 522.1
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Webkit
+										</td>
+										<td>
+											 OmniWeb 5.5
+										</td>
+										<td>
+											 OSX.4+
+										</td>
+										<td>
+											 420
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Webkit
+										</td>
+										<td>
+											 iPod Touch / iPhone
+										</td>
+										<td>
+											 iPod
+										</td>
+										<td>
+											 420.1
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Webkit
+										</td>
+										<td>
+											 S60
+										</td>
+										<td>
+											 S60
+										</td>
+										<td>
+											 413
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Presto
+										</td>
+										<td>
+											 Opera 7.0
+										</td>
+										<td>
+											 Win 95+ / OSX.1+
+										</td>
+										<td>
+											 -
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Presto
+										</td>
+										<td>
+											 Opera 7.5
+										</td>
+										<td>
+											 Win 95+ / OSX.2+
+										</td>
+										<td>
+											 -
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Presto
+										</td>
+										<td>
+											 Opera 8.0
+										</td>
+										<td>
+											 Win 95+ / OSX.2+
+										</td>
+										<td>
+											 -
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Presto
+										</td>
+										<td>
+											 Opera 8.5
+										</td>
+										<td>
+											 Win 95+ / OSX.2+
+										</td>
+										<td>
+											 -
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Presto
+										</td>
+										<td>
+											 Opera 9.0
+										</td>
+										<td>
+											 Win 95+ / OSX.3+
+										</td>
+										<td>
+											 -
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Presto
+										</td>
+										<td>
+											 Opera 9.2
+										</td>
+										<td>
+											 Win 88+ / OSX.3+
+										</td>
+										<td>
+											 -
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Presto
+										</td>
+										<td>
+											 Opera 9.5
+										</td>
+										<td>
+											 Win 88+ / OSX.3+
+										</td>
+										<td>
+											 -
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Presto
+										</td>
+										<td>
+											 Opera for Wii
+										</td>
+										<td>
+											 Wii
+										</td>
+										<td>
+											 -
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Presto
+										</td>
+										<td>
+											 Nokia N800
+										</td>
+										<td>
+											 N800
+										</td>
+										<td>
+											 -
+										</td>
+										<td>
+											 A
+										</td>
+									</tr>
+									<tr>
+										<td>
+											 Presto
+										</td>
+										<td>
+											 Nintendo DS browser
+										</td>
+										<td>
+											 Nintendo DS
+										</td>
+										<td>
+											 8.5
+										</td>
+										<td>
+											 C/A<sup>1</sup>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+
+						</div>
+    </div>
+    <table class="table table-striped table-bordered table-hover" id="sample_2">
+	<thead>
+		<tr>
+			<th>
+				 Rendering engine
+			</th>
+			<th>
+				 Browser
+			</th>
+			<th>
+				 Platform(s)
+			</th>
+			<th>
+				 Engine version
+			</th>
+			<th>
+				 CSS grade
+			</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>
+				 Trident
+			</td>
+			<td>
+				 Internet Explorer 4.0
+			</td>
+			<td>
+				 Win 95+
+			</td>
+			<td>
+				 4
+			</td>
+			<td>
+				 X
+			</td>
+		</tr>
+		<tr>
+			<td>
+				 Trident
+			</td>
+			<td>
+				 Internet Explorer 5.0
+			</td>
+			<td>
+				 Win 95+
+			</td>
+			<td>
+				 5
+			</td>
+			<td>
+				 C
+			</td>
+		</tr>
+	</tbody>
+</table>
+
+{% endblock %}
+
+{% block more_scripts %}
+    <!-- JS DATATABLE -->
+    <script type="text/javascript">
+        loadScript(plugin_path + "select2/js/select2.full.min.js", function(){
+
+            var table = jQuery('#sample_2');
+
+            /* Table tools samples: https://www.datatables.net/release-datatables/extras/TableTools/ */
+
+            /* Set tabletools buttons and button container */
+
+            jQuery.extend(true, jQuery.fn.DataTable.TableTools.classes, {
+                "container": "btn-group tabletools-btn-group pull-right",
+                "buttons": {
+                    "normal": "btn btn-sm btn-default",
+                    "disabled": "btn btn-sm btn-default disabled"
+                }
+            });
+
+            table.dataTable({
+                "order": [
+                    [0, 'asc']
+                ],
+                "lengthMenu": [
+                    [5, 15, 20, -1],
+                    [5, 15, 20, "All"] // change per page values here
+                ],
+
+                // set the initial value
+                "pageLength": 10,
+                "dom": "<'row' <'col-md-12'T>><'row'<'col-md-6 col-sm-12'l><'col-md-6 col-sm-12'f>r><'table-scrollable't><'row'<'col-md-5 col-sm-12'i><'col-md-7 col-sm-12'p>>", // horizobtal scrollable datatable
+
+                "tableTools": {
+                    "sSwfPath":plugin_path +  "datatables/extensions/TableTools/swf/copy_csv_xls_pdf.swf",
+                    "aButtons": [{
+                        "sExtends": "pdf",
+                        "sButtonText": "PDF"
+                    }, {
+                        "sExtends": "csv",
+                        "sButtonText": "CSV"
+                    }, {
+                        "sExtends": "xls",
+                        "sButtonText": "Excel"
+                    }, {
+                        "sExtends": "print",
+                        "sButtonText": "Print",
+                        "sInfo": 'Please press "CTRL+P" to print or "ESC" to quit',
+                        "sMessage": "Generated by DataTables"
+                    }, {
+                        "sExtends": "copy",
+                        "sButtonText": "Copy"
+                    }]
+                }
+            });
+
+            var tableWrapper = jQuery('#sample_2_wrapper'); // datatable creates the table wrapper by adding with id {your_table_jd}_wrapper
+            tableWrapper.find('.dataTables_length select').select2(); // initialize select2 dropdown
+
+        });
+    </script>
 {% endblock %}
