--- a/fimco/fimcosite/templates/login.html
+++ b/fimco/fimcosite/templates/login.html
@@ -7,7 +7,7 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-lg-4 col-md-6 offset-md-3 col-sm-12">
+                <div class="col-lg-4 offset-lg-4 col-md-6 offset-md-3 col-sm-12">
                     {% if messages %}
                         {% for message in messages %}
                             <!-- ALERT -->
