--- a/fimco/pochi/templates/pochi/statement.html
+++ b/fimco/pochi/templates/pochi/statement.html
@@ -1,8 +1,7 @@
 {% extends "pochi/main.html" %}
-{% load render_table from django_tables2 %}
 {% load static %}
 {% block links %}
-    <link rel="stylesheet" href="{% static 'django_tables2/themes/paleblue/css/screen.css' %}" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.16/r-2.2.0/sl-1.2.3/datatables.min.css"/>
 {% endblock %}
 {% block content %}
     <section id="middle">
@@ -39,17 +38,45 @@
                             </form>
                         </div>
                     </div>
-                    {% if trans %}
-                        <form method='GET'>
-                            {{ filter.form }}
-                            <input type='submit' value='Filter' />
-                            |
-                            Displaying {{ filter.qs.count }} of {{ filter.queryset.count }} items.
-                            |
-                            <a href='{{ request.path }}' >Clear</a>
-                        </form>
+                    {% if transactions %}
+{#                        <form method='GET'>#}
+{#                            #}
+{#                            <input type='submit' value='Filter' />#}
+{#                            <a href='{{ request.path }}' >Clear</a>#}
+{#                        </form>#}
                         <div class="table-responsive">
-                            {% render_table table %}
+                            <table class="table table-striped table-bordered table-hover" id="datatable_sample">
+                                <thead>
+                                    <tr>
+                                        <th>Date</th>
+                                        <th>Account</th>
+                                        <th>Mobile number</th>
+                                        <th>Service</th>
+                                        <th>Channel</th>
+                                        <th>Currency</th>
+                                        <th>Amount</th>
+                                        <th>Charges</th>
+                                        <th>Reference</th>
+                                        <th>Status</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                {% for transaction in transactions %}
+                                    <tr class="odd gradeX">
+                                        <td class="center">{{ transaction.fulltimestamp }}</td>
+                                        <td class="center">{{ transaction.account }}</td>
+                                        <td class="center">{{ transaction.msisdn }}</td>
+                                        <td class="center">{{ transaction.service }}</td>
+                                        <td class="center">{{ transaction.channel }}</td>
+                                        <td class="center">{{ transaction.currency }}</td>
+                                        <td class="center">{{ transaction.amount }}</td>
+                                        <td class="center">{{ transaction.charge }}</td>
+                                        <td class="center">{{ transaction.reference }}</td>
+                                        <td class="center">{{ transaction.status }}</td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
                         </div>
                     {% else %}
                         <div class="alert alert-default margin-bottom-30">
@@ -68,4 +95,8 @@
 {#            {% endif %}#}
         </div>
     </section>
+{% endblock %}
+{% block scripts %}
+    <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.16/r-2.2.0/sl-1.2.3/datatables.min.js">
+    </script>
 {% endblock %}
