changes in fimco website

--- a/fimco/fimcoplatform/templates/fimcoplatform/pricing.html
+++ b/fimco/fimcoplatform/templates/fimcoplatform/pricing.html
@@ -6,7 +6,10 @@
                 <!-- LEFT -->
                 <div class="col-md-9">
                     <p class="lead">
-                        Nam et lacus neque. Ut enim massa, sodales tempor convallis et, iaculis ac massa.
+                        Access to market information includes historical data and is a powerful in the hands of
+                        investors to drive their investment decisions. We offer a free limited view of market
+                        information as well as fee based service for individuals and corporates that covers more data
+                        and more historical analysis.
                     </p>
                     <hr />
                     <div class="row">
