--- a/fimco/fimcosite/templates/brokerage.html
+++ b/fimco/fimcosite/templates/brokerage.html
@@ -10,58 +10,27 @@
             <div class="row">
                 <!-- LEFT -->
                 <div class="col-md-9">
-                    <img class="float-left" src="/static/img/POCHI.png" alt="" />
                     <div class="heading-title">
                         <h2>Brokerage</h2>
                     </div>
-                    <p>Lorem ipsum dolor sit amet tempus malesuada. Suspendisse in dui. Ut elit metus, quis consectetuer
-                        congue augue quis erat. Quisque pretium eu, aliquam odio. Donec a pellentesque consectetuer,
-                        augue nec odio. Nam accumsan at, porttitor sem at porttitor laoreet viverra mattis.
-                        Aliquam ultricies accumsan. In tempus. Pellentesque felis.
+                    <p>
+                        We offer access to Dar es Salaam Stock Exchange listed securities as a licensed broker/dealer of
+                        securities.
                     </p>
-                    <p>Aliquam nisl. Nunc condimentum wisi. Aenean nonummy risus at eros. Suspendisse congue odio at
-                        purus. Quisque eu justo. Quisque eu eros. Sed accumsan dictum, laoreet sit amet ante.
-                        Curabitur ultrices iaculis. In gravida eros in consequat diam. Donec nonummy, tellus in lorem
-                        lorem pretium magna. In hac habitasse platea dictumst. Suspendisse elit eu scelerisque a,
-                        gravida vel, purus. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
-                        per inceptos hymenaeos.
+                    <p>
+                        Whilst most intermediaries and market watchers provide a snapshot of activity at the end of the
+                        day; through our FIMCO platform we offer our clients a way of staying close to the DSE activity
+                        as they move throughout the trading day.
                     </p>
-                    <blockquote>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas metus nulla, commodo a
-                            sodales sed, dignissim pretium nunc.
-                        </p>
-                        <cite>Anonymous</cite>
-                    </blockquote>
+                    <p>
+                        Reach out to us and let us discuss how we can help you navigate the opportunities in the DSE
+                        for your portfolio.
+                    </p>
                 </div>
                 <!-- /LEFT -->
 
                 <!-- RIGHT -->
                 <div class="col-md-3">
-
-                    <div class="box-static box-border-top mb-60">
-                        <div class="box-title">
-                            <h4>Why deal with us</h4>
-                        </div>
-                        <ul class="list-unstyled list-icons p-15 pb-0">
-                            <li class="mb-20">
-                                <i class="fa fa-check text-success fs-18"></i>
-                                <span class="block bold fs-18">Choice</span>
-                                <small>Whatever your needs, experience and appetite for risk, we have an investment opportunity to suit you</small>
-                            </li>
-                            <li class="mb-20">
-                                <i class="fa fa-check text-success fs-18"></i>
-                                <span class="block bold fs-18">Expertise</span>
-                                <small>We combine financial expertise with ground-breaking technology to make investing smarter and easier</small>
-                            </li>
-                            <li class="mb-20">
-                                <i class="fa fa-check text-success fs-18"></i>
-                                <span class="block bold fs-18">Simplicity</span>
-                                <small>Our investment platforms are designed to be simple and intuitive, our language clear and straightforward</small>
-                            </li>
-                        </ul>
-                        <hr />
-                    </div>
-                    <hr />
                     <!-- SOCIAL ICONS -->
                     <div class="hidden-xs-down text-center">
                         <a href="#" class="social-icon social-icon-border social-facebook" data-toggle="tooltip" data-placement="top" title="Facebook">
