--- a/fimco/fimcosite/templates/market-information.html
+++ b/fimco/fimcosite/templates/market-information.html
@@ -31,6 +31,24 @@
     </section>
     <!-- /HOME -->
 
+    <section id="description">
+        <div class="container">
+            <h2 class="fs-25">What does FIMCO offer?</h2>
+            <p class="lead">
+                We offer clients access to market prices as they develop throughout the trading across Forex, Stocks,
+                interest rates and Macro data.
+            </p>
+            <p class="lead">
+                Access to market information includes historical data and is a powerful in the hands of investors to drive
+                their investment decisions. We offer a free limited view of market information as well as fee based service
+                for individuals and corporates that covers more data and more historical analysis.
+            </p>
+            <p class="lead">
+                Access our platform by registering for a POCHI account and choosing market information.
+            </p>
+        </div>
+    </section>
+
     <!-- FEATURES -->
     <section id="features">
         <div class="container">
