--- a/fimco/fimcosite/templates/pochi.html
+++ b/fimco/fimcosite/templates/pochi.html
@@ -14,22 +14,28 @@
                     <div class="heading-title">
                         <h2>It's simple transparent & Competitive</h2>
                     </div>
-                    <p> A solution that offers savers the ability to access competitive rates whilst having access to their cash.
-                        POCHI rates will beat the average interest rate provided by bank accounts. Ut elit metus, quis consectetuer
-                        congue augue quis erat. Quisque pretium eu, aliquam odio. Donec a pellentesque consectetuer, augue nec odio.
-                        Nam accumsan at, porttitor sem at porttitor laoreet viverra mattis. Aliquam ultricies accumsan.
-                    </p>
-                    <p> POCHI will keep your principal burning whilst you enjoy the monthly interest into your wallet
-                        (or designated wallet). Suspendisse congue odio at purus. Quisque eu justo. Quisque eu eros.
-                        Sed accumsan dictum, laoreet sit amet ante. Curabitur ultrices iaculis. In gravida eros in consequat diam.
-                        Donec nonummy, tellus in lorem lorem pretium magna. In hac habitasse platea dictumst.
-                        Suspendisse elit eu scelerisque a, gravida vel, purus. Class aptent taciti sociosqu ad litora
-                        torquent per conubia nostra, per inceptos hymenaeos.
-                    </p>
                     <blockquote>
                         <p>"Spare the seed, devour the fruit"; "Usile mbegu, kula tunda"</p>
                         <cite>Anonymous</cite>
                     </blockquote>
+                    <p>
+                        POCHI is a cash management solution. We offer to our clients who are looking for somewhere to
+                        park their cash competitively, transparently and conveniently. As investment managers we take
+                        cash from our client and invest it in various instruments.
+                    </p>
+                    <p>
+                        POCHI pools together client funds and invests in competitive call accounts in the
+                        banking industry. The scaling up done by pooling of funds allows FIMCO to pass this benefit via
+                        a more competitive rate and app/web access to manage their investments. POCHI allows for
+                        multiple cash in and cash out options to allow investors various avenues to invest their cash
+                        profitably as soon as it becomes available to do so.
+                    </p>
+                    <p>
+                        A solution that offers savers the ability to access competitive rates whilst having access to
+                        their cash. POCHI rates will beat the average interest rate provided by bank accounts.
+                        POCHI will keep your principal burning whilst you enjoy the monthly interest into your wallet
+                        (or designated wallet).
+                    </p>
                     <div class="col-md-3">
                         <a class="tp-caption WebProduct-Button"
                             href="{% url 'pochi' %}"
