--- a/fimco/fimcoplatform/templates/fimcoplatform/exchange.html
+++ b/fimco/fimcoplatform/templates/fimcoplatform/exchange.html
@@ -28,7 +28,65 @@
 
                 </div>
                 <div class="panel-body">
-
+                    <div class="panel panel-default">
+                    {% if transactions %}
+                        <form method='GET'>
+                            <div class="row">
+                                <div class="col-lg-3 offset-lg-6 col-md-3 offset-md-6 col-sm-8">
+                                    <input type="text"
+                                           class="form-control rangepicker"
+                                           name="range"
+                                           value=""
+                                           data-format="yyyy-mm-dd"
+                                           data-from="2018-01-01"
+                                           data-to="2018-12-31">
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-sm-4">
+                                    <input type="submit" class="btn btn-primary" value="GO">
+                                </div>
+                            </div>
+                        </form>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-bordered table-hover" id="auction_table">
+                                <thead>
+                                    <tr>
+                                        <th>Date</th>
+                                        <th>Account</th>
+                                        <th>Mobile number</th>
+                                        <th>Service</th>
+                                        <th>Channel</th>
+                                        <th>Currency</th>
+                                        <th>Amount</th>
+                                        <th>Charges</th>
+                                        <th>Reference</th>
+                                        <th>Status</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                {% for transaction in transactions %}
+                                    <tr class="odd gradeX">
+                                        <td class="center">{{ transaction.fulltimestamp }}</td>
+                                        <td class="center">{{ transaction.account }}</td>
+                                        <td class="center">{{ transaction.msisdn }}</td>
+                                        <td class="center">{{ transaction.service }}</td>
+                                        <td class="center">{{ transaction.channel }}</td>
+                                        <td class="center">{{ transaction.currency }}</td>
+                                        <td class="center">{{ transaction.amount }}</td>
+                                        <td class="center">{{ transaction.charge }}</td>
+                                        <td class="center">{{ transaction.reference }}</td>
+                                        <td class="center">{{ transaction.status }}</td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    {% else %}
+                        <div class="alert alert-default margin-bottom-30">
+                            <strong>There is no exchange data available yet!</strong>
+                        </div>
+                    {% endif %}
+                        <hr class="nomargin-top" />
+                    </div>
                 </div>
             </div>
         </div>
