--- a/fimco/fimcosite/templates/fund.html
+++ b/fimco/fimcosite/templates/fund.html
@@ -10,58 +10,27 @@
             <div class="row">
                 <!-- LEFT -->
                 <div class="col-md-9">
-                    <img class="float-left" src="/static/img/POCHI.png" alt="" />
                     <div class="heading-title">
                         <h2>Tailored Fund Management Services</h2>
                     </div>
-                    <p>Lorem ipsum dolor sit amet tempus malesuada. Suspendisse in dui. Ut elit metus, quis consectetuer
-                        congue augue quis erat. Quisque pretium eu, aliquam odio. Donec a pellentesque consectetuer,
-                        augue nec odio. Nam accumsan at, porttitor sem at porttitor laoreet viverra mattis.
-                        Aliquam ultricies accumsan. In tempus. Pellentesque felis.
+                    <p>
+                        We offer our clients access to different funds that will maximize their returns and manage
+                        risks accordingly.
                     </p>
-                    <p>Aliquam nisl. Nunc condimentum wisi. Aenean nonummy risus at eros. Suspendisse congue odio at
-                        purus. Quisque eu justo. Quisque eu eros. Sed accumsan dictum, laoreet sit amet ante.
-                        Curabitur ultrices iaculis. In gravida eros in consequat diam. Donec nonummy, tellus in lorem
-                        lorem pretium magna. In hac habitasse platea dictumst. Suspendisse elit eu scelerisque a,
-                        gravida vel, purus. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
-                        per inceptos hymenaeos.
+                    <p>
+                        Client can choose from standardized fund solutions such as POCHI, or our Dollar Fund to maximize
+                        on their returns by pooling funds by FIMCO which then invests diligently in the local markets;
+                        or bespoke solutions that cater to our clients Size of investment, liquidity preference,
+                        risk averseness and the yields that the market has to offer.
                     </p>
-                    <blockquote>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas metus nulla, commodo a
-                            sodales sed, dignissim pretium nunc.
-                        </p>
-                        <cite>Anonymous</cite>
-                    </blockquote>
+                    <p>
+                        Reach out to discuss how we can help you invest your funds profitably.
+                    </p>
                 </div>
                 <!-- /LEFT -->
 
                 <!-- RIGHT -->
                 <div class="col-md-3">
-
-                    <div class="box-static box-border-top mb-60">
-                        <div class="box-title">
-                            <h4>Why deal with us</h4>
-                        </div>
-                        <ul class="list-unstyled list-icons p-15 pb-0">
-                            <li class="mb-20">
-                                <i class="fa fa-check text-success fs-18"></i>
-                                <span class="block bold fs-18">Choice</span>
-                                <small>Whatever your needs, experience and appetite for risk, we have an investment opportunity to suit you</small>
-                            </li>
-                            <li class="mb-20">
-                                <i class="fa fa-check text-success fs-18"></i>
-                                <span class="block bold fs-18">Expertise</span>
-                                <small>We combine financial expertise with ground-breaking technology to make investing smarter and easier</small>
-                            </li>
-                            <li class="mb-20">
-                                <i class="fa fa-check text-success fs-18"></i>
-                                <span class="block bold fs-18">Simplicity</span>
-                                <small>Our investment platforms are designed to be simple and intuitive, our language clear and straightforward</small>
-                            </li>
-                        </ul>
-                        <hr />
-                    </div>
-                    <hr />
                     <!-- SOCIAL ICONS -->
                     <div class="hidden-xs-down text-center">
                         <a href="#" class="social-icon social-icon-border social-facebook" data-toggle="tooltip" data-placement="top" title="Facebook">
