--- a/fimco/fimcosite/templates/top-bar.html
+++ b/fimco/fimcosite/templates/top-bar.html
@@ -41,7 +41,7 @@
                     <a class="no-text-underline" href="{% url 'pochi' %}"><i class="fa fa-money"></i> MARKET</a>
                 </li>
             {% endif %}
-            <li><a href=""><i class="fa fa-phone"></i></a></li>
+            <li><a href="{% url 'site' 'contact' %}"><i class="fa fa-phone"></i></a></li>
         </ul>
     </div>
 </div>
