--- a/fimco/pochi/templates/pochi/statement.html
+++ b/fimco/pochi/templates/pochi/statement.html
@@ -1,6 +1,7 @@
 {% extends "pochi/main.html" %}
 {% load static %}
 {% block links %}
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.16/r-2.2.0/sl-1.2.3/datatables.min.css"/>
 {% endblock %}
 {% block content %}
@@ -39,13 +40,24 @@
                         </div>
                     </div>
                     {% if transactions %}
-{#                        <form method='GET'>#}
-{#                            #}
-{#                            <input type='submit' value='Filter' />#}
-{#                            <a href='{{ request.path }}' >Clear</a>#}
-{#                        </form>#}
+                        <form method='GET'>
+                            <div class="row">
+                                <div class="col-lg-3 offset-lg-6 col-md-3 offset-md-6 col-sm-8">
+                                    <input type="text"
+                                           class="form-control rangepicker"
+                                           name="range"
+                                           value=""
+                                           data-format="yyyy-mm-dd"
+                                           data-from="2018-01-01"
+                                           data-to="2018-12-31">
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-sm-4">
+                                    <input type="submit" class="btn btn-primary" value="GO">
+                                </div>
+                            </div>
+                        </form>
                         <div class="table-responsive">
-                            <table class="table table-striped table-bordered table-hover" id="datatable_sample">
+                            <table class="table table-striped table-bordered table-hover" id="sample_2">
                                 <thead>
                                     <tr>
                                         <th>Date</th>
@@ -97,6 +109,9 @@
     </section>
 {% endblock %}
 {% block scripts %}
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.16/r-2.2.0/sl-1.2.3/datatables.min.js">
     </script>
+    <script type="text/javascript" src="/static/pochi/js/statement.js"></script>
 {% endblock %}
