updated exchange view

--- a/fimco/fimcosite/static/css/main.css
+++ b/fimco/fimcosite/static/css/main.css
@@ -1,6 +1,6 @@
 body {
   background-color: #f0f0f0;
-  font-family: Raleway, Roboto;
+  /*font-family: Raleway, Roboto;*/
   -webkit-font-smoothing: antialiased;
   font-size: 16px;
   line-height: 1.5;
