--- a/fimco/fimcoplatform/templates/fimcoplatform/exchange.html
+++ b/fimco/fimcoplatform/templates/fimcoplatform/exchange.html
@@ -1,92 +1,51 @@
 {% extends "fimcoplatform/base.html" %}
 {% block main %}
     <div class="row">
-        <div class="col-md-4">
-            <!-- Nav -->
-            <div id="panel-ui-tan-l5" class="panel panel-default">
-                <div class="panel-heading">
-                    <span class="elipsis"><!-- panel title -->
-                        <strong>Group Information</strong>
-                    </span>
-                </div>
-                <!-- panel content -->
-                <div class="panel-body">
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exchangeChartModal">
-                        View chart
-                    </button>
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exchangeTableModal">
-                        View table
-                    </button>
-                </div>
-                <!-- /panel content -->
-            </div>
-            <!-- /Nav -->
-        </div>
-        <div class="col-md-8">
+        <div class="col-md-10">
             <div class="panel panel-default">
                 <div class="panel-heading">
-
+                    <span class="title elipsis">
+                        <strong>Exchange rates as of {% now 'd M, Y' %}</strong>
+                    </span>
                 </div>
                 <div class="panel-body">
-                    <div class="panel panel-default">
-                    {% if transactions %}
-                        <form method='GET'>
-                            <div class="row">
-                                <div class="col-lg-3 offset-lg-6 col-md-3 offset-md-6 col-sm-8">
-                                    <input type="text"
-                                           class="form-control rangepicker"
-                                           name="range"
-                                           value=""
-                                           data-format="yyyy-mm-dd"
-                                           data-from="2018-01-01"
-                                           data-to="2018-12-31">
-                                </div>
-                                <div class="col-lg-3 col-md-3 col-sm-4">
-                                    <input type="submit" class="btn btn-primary" value="GO">
-                                </div>
-                            </div>
-                        </form>
-                        <div class="table-responsive">
-                            <table class="table table-striped table-bordered table-hover" id="auction_table">
-                                <thead>
-                                    <tr>
-                                        <th>Date</th>
-                                        <th>Account</th>
-                                        <th>Mobile number</th>
-                                        <th>Service</th>
-                                        <th>Channel</th>
-                                        <th>Currency</th>
-                                        <th>Amount</th>
-                                        <th>Charges</th>
-                                        <th>Reference</th>
-                                        <th>Status</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                {% for transaction in transactions %}
-                                    <tr class="odd gradeX">
-                                        <td class="center">{{ transaction.fulltimestamp }}</td>
-                                        <td class="center">{{ transaction.account }}</td>
-                                        <td class="center">{{ transaction.msisdn }}</td>
-                                        <td class="center">{{ transaction.service }}</td>
-                                        <td class="center">{{ transaction.channel }}</td>
-                                        <td class="center">{{ transaction.currency }}</td>
-                                        <td class="center">{{ transaction.amount }}</td>
-                                        <td class="center">{{ transaction.charge }}</td>
-                                        <td class="center">{{ transaction.reference }}</td>
-                                        <td class="center">{{ transaction.status }}</td>
-                                    </tr>
-                                {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
+                    {% if data %}
+                    <table class="table table-striped table-bordered table-hover" id="exchange_table">
+                        <thead>
+                            <tr>
+                                <th>Currency</th>
+                                <th>Code</th>
+                                <th>Buying</th>
+                                <th>Selling</th>
+                                <th>Day High</th>
+                                <th>Day Low</th>
+                                <th>% change</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for exchange in data %}
+                            <tr>
+                                <td>
+                                    <a href="{% url 'exchange' 'single' %}?currency={{ exchange.counter_currency }}">
+                                    {{ exchange.counter_currency }}
+                                    </a>
+                                </td>
+                                <td>{{ exchange.code }}</td>
+                                <td>{{ exchange.buy }}</td>
+                                <td>{{ exchange.sell }}</td>
+                                <td>{{ exchange.day_high }}</td>
+                                <td>{{ exchange.day_low }}</td>
+                                <td>{{ exchange.change }}</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
                     {% else %}
                         <div class="alert alert-default margin-bottom-30">
                             <strong>There is no exchange data available yet!</strong>
                         </div>
                     {% endif %}
-                        <hr class="nomargin-top" />
-                    </div>
+                    <hr class="nomargin-top" />
                 </div>
             </div>
         </div>
@@ -94,74 +53,19 @@
 {% endblock %}
 
 {% block more_scripts %}
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.16/r-2.2.0/sl-1.2.3/datatables.min.js">
+    </script>
     <script type="text/javascript">
         $(document).ready(function() {
 
-            var table = $('#datatable_sample');
-            table.dataTable({
-                "columns": [
-                    {"orderable": false},
-                    {"orderable": true},
-                    {"orderable": false},
-                    {"orderable": false},
-                    {"orderable": true},
-                    {"orderable": false}
-                ],
-                "lengthMenu": [
-                    [5, 15, 20, -1],
-                    [5, 15, 20, "All"] // change per page values here
-                ],
-                // set the initial value
-                "pageLength": 5,
-                "pagingType": "bootstrap_full_number",
-                "language": {
-                    "lengthMenu": "  _MENU_ records",
-                    "paginate": {
-                        "previous":"Prev",
-                        "next": "Next",
-                        "last": "Last",
-                        "first": "First"
-                    }
-                },
-                "columnDefs": [
-                    {  // set default column settings
-                        'orderable': false,
-                        'targets': [0]
-                    },
-                    {
-                        "searchable": false,
-                        "targets": [0]
-                    }
-                ],
-                "order": [
-                    [1, "asc"]
-                ] // set first column as a default sort by asc
-            });
+            $('input[name="exchangerange"]').daterangepicker();
 
-            var tableWrapper = jQuery('#datatable_sample_wrapper');
-
-            // modify table per page drop down
-            tableWrapper.find('.dataTables_length select').addClass("form-control input-xsmall input-inline");
-        });
-
-        var ctx = document.getElementById('exchangeChart').getContext('2d');
-        new Chart(ctx, {
-            // The type of chart we want to create
-            type: 'line',
-
-            // The data for our dataset
-            data: {
-                labels: ["January", "February", "March", "April", "May", "June", "July"],
-                datasets: [{
-                    label: "My First dataset",
-                    backgroundColor: 'rgb(255, 99, 132)',
-                    borderColor: 'rgb(255, 99, 132)',
-                    data: [0, 10, 5, 2, 20, 30, 45]
-                }]
-            },
-
-            // Configuration options go here
-            options: {}
+            $('#exchange_table').DataTable( {
+                dom: 'B<"clear">lfrtip',
+                buttons: [ 'copy', 'csv', 'excel' ]
+            } );
         });
     </script>
 {% endblock %}
